update oni2 fonts

--- a/.config/oni2/configuration.json
+++ b/.config/oni2/configuration.json
@@ -3,6 +3,8 @@
   "editor.detectIndentation": true,
   "editor.fontFamily": "Source Code Pro",
   "editor.fontSize": 13,
+  "editor.fontSmoothing": "subpixel-antialiased",
+  "editor.fontWeight": 400,
   "editor.largeFileOptimizations": true,
   "editor.highlightActiveIndentGuide": true,
   "editor.indentSize": 4,
@@ -21,6 +23,9 @@
   "files.exclude": [ "_esy", "node_modules", ".git" ],
   "telemetry.enableCrashReporter": false,
   "telemetry.enableTelemetry": false,
+  "terminal.integrated.fontFamily": "Source Code Pro",
+  "terminal.integrated.fontSize": 13,
+  "terminal.integrated.fontSmoothing": "subpixel-antialiased",
   "vim.leader": "<space>",
   "vim.useSystemClipboard": ["yank"],
   "workbench.activityBar.visible": true,
